doc: fix bullet(arrow) alignment vertically
Fixed the alignment of the bullet points (green arrow) under
'Node.js <version> documentation' by adjusting the property in
style.css

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -183,6 +183,8 @@ li.picker-header {
 }
 
 li.picker-header .collapsed-arrow, li.picker-header .expanded-arrow {
+  position: relative;
+  bottom: 0.2rem;
   width: 1.5ch;
   height: 1.5em;
 }
